Added logic to accept parameters from command line.

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src='www.google.com/js/app.js' language="JavaScript" type="text/javascript"/>
+    <script src='http://google.com/js/app.js' language="JavaScript" type="text/javascript"/>
 </head>
 <body>
 
